upgrade DBFlute Engine to 1.2.8

--- a/mydbflute/dbflute-1.x/templates/om/java/bsentity/BaseEntity.vm
+++ b/mydbflute/dbflute-1.x/templates/om/java/bsentity/BaseEntity.vm
@@ -1,5 +1,5 @@
 ##
-## Copyright 2014-2022 the original author or authors.
+## Copyright 2014-2024 the original author or authors.
 ##
 ## Licensed under the Apache License, Version 2.0 (the "License");
 ## you may not use this file except in compliance with the License.
@@ -70,11 +70,17 @@ import ${table.relationalNullObjectProviderPackage}.*;
 #set ($myEntityInterfaceDef = "${myEntityInterfaceDef}, ColumnNullObjectable")
 #end
 
+#set ($commentForJavaDocValid = $table.isCommentForJavaDocValid())
+#set ($javadocFirstLineRear = "")
+#if ($commentForJavaDocValid)
+#set ($javadocFirstLineRear = " <br>")
+#end
 /**
- * The entity of ${table.basicInfoDispString}. <br>
-#if ($table.isCommentForJavaDocValid())
+ * The entity of ${table.basicInfoDispString}.${javadocFirstLineRear}
+#if ($commentForJavaDocValid)
  * ${table.commentForJavaDoc}
 #end
+#if ($table.isGenerateTableDetailJavaDoc())
  * <pre>
  * [primary-key]
  *     ${table.primaryKeyNameCommaString}
@@ -113,6 +119,7 @@ import ${table.relationalNullObjectProviderPackage}.*;
 #end
  * = = = = = = = = = =/
  * </pre>
+#end
  * @author ${database.classAuthor}
  */
 public abstract class $myClassName extends AbstractEntity implements ${myEntityInterfaceDef} {
