--- a/mydbflute/dbflute-1.x/templates/om/java/allcommon/CDef.vm
+++ b/mydbflute/dbflute-1.x/templates/om/java/allcommon/CDef.vm
@@ -1,5 +1,5 @@
 ##
-## Copyright 2014-2022 the original author or authors.
+## Copyright 2014-2024 the original author or authors.
 ##
 ## Licensed under the Apache License, Version 2.0 (the "License");
 ## you may not use this file except in compliance with the License.
@@ -175,6 +175,7 @@ public interface ${glCDef} extends Classification {
          * @return The instance of the corresponding classification to the name. (NullAllowed: if not found, returns null)
          * @deprecated use byName(name) instead.
          */
+        @Deprecated
         public static ${classificationName} nameOf(String name) { return _slimmer.nameOf(name, nm -> valueOf(nm)); }
 #end
         /**
@@ -202,6 +203,7 @@ public interface ${glCDef} extends Classification {
          * @return The snapshot list of classification elements in the code list. (NotNull, EmptyAllowed: when empty specified)
          * @deprecated use e.g. Stream API with of() instead.
          */
+        @Deprecated
         public static List<${classificationName}> listOf(Collection<String> codeList) { return _slimmer.listOf(codeList); }
 #end
 #foreach ($group in $classificationTop.groupList)
@@ -224,6 +226,7 @@ public interface ${glCDef} extends Classification {
          * @return The snapshot list of classification elements in the group. (NotNull, EmptyAllowed: if the group is not found)
          * @deprecated use listByGroup(groupName) instead.
          */
+        @Deprecated
 #if ($classificationTop.hasGroup())
         public static List<${classificationName}> groupOf(String groupName) {
 #foreach ($group in $classificationTop.groupList)
