--- a/mydbflute/dbflute-1.x/templates/om/java/plugin/lastaflute/LaAppCDef.vm
+++ b/mydbflute/dbflute-1.x/templates/om/java/plugin/lastaflute/LaAppCDef.vm
@@ -1,5 +1,5 @@
 ##
-## Copyright 2014-2022 the original author or authors.
+## Copyright 2014-2024 the original author or authors.
 ##
 ## Licensed under the Apache License, Version 2.0 (the "License");
 ## you may not use this file except in compliance with the License.
@@ -31,6 +31,7 @@ import ${referredCDefFqcn};
 #end
 #end
 
+#set ($isMakeSimpleDeterminationMethod = $optionMap.isMakeSimpleDeterminationMethod)
 #set ($isMakeCDefOldStyleCodeOfMethod = $optionMap.isMakeCDefOldStyleCodeOfMethod)
 #set ($isMakeCDefOldStyleNameOfMethod = $optionMap.isMakeCDefOldStyleNameOfMethod)
 #set ($isMakeCDefOldStyleListOfMethod = $optionMap.isMakeCDefOldStyleListOfMethod)
@@ -133,6 +134,21 @@ public interface ${glCDef} extends Classification {
 #end
         }
 #end
+#if ($isMakeSimpleDeterminationMethod)
+#foreach ($classificationElement in $classificationTop.classificationElementList)
+        /**
+         * Is the classification ${classificationElement.name}? <br>
+#if ($classificationElement.hasCommentDisp())
+         * ${classificationElement.commentForJavaDocNest} <br>
+#end
+         * @return The determination, true or false.
+         */
+#if ($classificationElement.isDeprecated())
+        @Deprecated
+#end
+        public boolean is${classificationElement.name}() { return ${classificationElement.name}.equals(this); }
+#end
+#end
 #foreach ($group in $classificationTop.groupList)
         /**
          * Is the classification in the group? <br>
@@ -181,6 +197,7 @@ public interface ${glCDef} extends Classification {
          * @return The instance of the corresponding classification to the name. (NullAllowed: if not found, returns null)
          * @deprecated use byName(name) instead.
          */
+        @Deprecated
         public static ${classificationName} nameOf(String name) { return _slimmer.nameOf(name, nm -> valueOf(nm)); }
 #end
         /**
@@ -208,6 +225,7 @@ public interface ${glCDef} extends Classification {
          * @return The snapshot list of classification elements in the code list. (NotNull, EmptyAllowed: when empty specified)
          * @deprecated use e.g. Stream API with of() instead.
          */
+        @Deprecated
         public static List<${classificationName}> listOf(Collection<String> codeList) { return _slimmer.listOf(codeList); }
 #end
 #foreach ($group in $classificationTop.groupList)
@@ -230,6 +248,7 @@ public interface ${glCDef} extends Classification {
          * @return The snapshot list of classification elements in the group. (NotNull, EmptyAllowed: if the group is not found)
          * @deprecated use listByGroup(groupName) instead.
          */
+        @Deprecated
 #if ($classificationTop.hasGroup())
         public static List<${classificationName}> groupOf(String groupName) {
 #foreach ($group in $classificationTop.groupList)
